Separated Qilletni API and Spotify implementations into submodules