@@ -14,29 +14,23 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
-//    implementation 'org.slf4j:slf4j-api:2.0.9'
-//    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:3.0.0-alpha1'
-//    
-//    implementation 'org.apache.logging.log4j:log4j:2.21.1'
-
     // SLF4J API dependency
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-api:2.22.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.22.1'
 
     implementation 'org.antlr:antlr4-runtime:4.13.1'
     antlr 'org.antlr:antlr4:4.13.1'
-
-    implementation ('org.eclipse.jetty:jetty-server:12.0.4') {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-    }
-
-    implementation ('se.michaelthelin.spotify:spotify-web-api-java:8.3.4') {
-        exclude group: 'org.slf4j', module: 'slf4j-api'
-    }
     
     implementation 'org.hibernate:hibernate-core:5.5.7.Final'
     implementation 'org.postgresql:postgresql:42.3.8'
+    
+    implementation project(':qilletni-api')
+    implementation project(':qilletni-spotify')
+}
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
 }
 
 //sourceSets {
